+ New animated popup for planet landing. As landscape generation can take up to a minute, user must be sure
that the game has not hanged up
+ Added plants to planet surface
* Moved some research projects to external json files.
+ Planets and space objects can now be scanned.
+ Added gui panel that pops up when some interaction is available

=====================================================
VERSION 0.0.9

15.08.2013

+ New content
* Monster image generator moved to separate project - 'Frankenstein'
* New star sprites from Dname
* New planet types
* Multiple bugfixes and some improvements based on /gd-found issues
* Better build

=====================================================
VERSION 0.0.8

31.07.2013

+ New GUI system using niffy-gui library
* Nicer sprites for some objects
* Planetary landscape now generated using Perlin noise, slow but effective
* Crew weapons are now stored in json
+ Engineering upgrade system implemented

=====================================================
VERSION 0.0.7

15.05.2013

+ More tutorials at the beginning of game
+ Refilling lost crewmembers on Earth. They also reduce resulting score
+ Alien animal sprite generator implemented and used for generating sprites
+ Each star system now has a name

=====================================================
VERSION 0.0.6

24.04.2013

+ Generating sprites for planets
* Nice portraits for dialogs made by gerardivn
+ End-game screens, currently with stub art and only with 2 endings.
+ First tutorial dialog (when receiving first damage)
+ Requesting assistance from Klisk race with evacuation

=====================================================
VERSION 0.0.5

27.03.2013

+ Dialogs with options that are visible only in certain conditions (based on game state)
* Fixes of dialog view (multi-line replies)
* Some crashes fixed
+ Dialog listeners
+ New random encounters
+ Encounter with Obliterator ship
+ Weapon test quest